platform/k8s/base/networking/inventory-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
  selector:
    app: inventory-service
  ports:
    - name: http
      port: 8000
      targetPort: 8000
